src/objects/Management_IP_Port_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Negotiate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Negotiate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Set_PoE__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Set PoE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connected_Device_Name__c</fullName>
        <formula>IF (Connected_Device__c == null, &apos;&apos;, Connected_Device__r.Management_IP__r.Site__r.Name + &quot; &quot; + Connected_Device__r.Management_IP__r.Hostname__c + &quot; - Port &quot; +  Connected_Device__r.Management_Device_Type_Port__r.Name + IF(Connected_Device__r.Description__c != &quot;&quot;, &quot; (&quot; + Connected_Device__r.Description__c + &quot;)&quot;, &quot;&quot;))</formula>
        <label>Connected Device</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connected_Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connected Device</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Management_IP__c</field>
                <operation>notEqual</operation>
                <valueField>Management_IP_Port_Assignment__c.Management_IP__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Management_IP_Port_Assignment__c</referenceTo>
        <relationshipLabel>Management IP Port Assignments</relationshipLabel>
        <relationshipName>Connected_Device</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Device_Type_Port__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Management Device Type Port</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Management_Device_Type__c</field>
                <operation>equals</operation>
                <valueField>Management_Device_Type_Port__c.Management_Device_Type__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Management_Device_Type_Port__c</referenceTo>
        <relationshipLabel>Management IP Port Assignments</relationshipLabel>
        <relationshipName>Management_IP_Port_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Management_Device_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Management Device Type</label>
        <referenceTo>Management_Device_Type__c</referenceTo>
        <relationshipLabel>Management IP Port Assignments</relationshipLabel>
        <relationshipName>Management_IP_Port_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Management_IP__c</fullName>
        <label>Management IP</label>
        <referenceTo>Management_IP__c</referenceTo>
        <relationshipLabel>Management IP Port Assignments</relationshipLabel>
        <relationshipName>Management_IP_Port_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Management_IP__r.Site__r.Name + &quot; &quot; + Management_IP__r.Hostname__c + &quot; - Port &quot; +  Management_Device_Type_Port__r.Name + IF(Description__c != &quot;&quot;, &quot; (&quot; + Description__c + &quot;)&quot;, &quot;&quot;)</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PoE_Input__c</fullName>
        <label>PoE Input</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PoE</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PoE_Output__c</fullName>
        <label>PoE Output</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PoE</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Port_Speed__c</fullName>
        <label>Port Speed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Port_Speed</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skip_Update_Remote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Update Remote</label>
        <type>Checkbox</type>
    </fields>
    <label>Management IP Port Assignment</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Management IP Port Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_Auto_Negotiation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Management_Device_Type_Port__r.Auto_Negotiation_Support__c = false,  Auto_Negotiate__c = true)</errorConditionFormula>
        <errorDisplayField>Auto_Negotiate__c</errorDisplayField>
        <errorMessage>Auto Negotiation is not supported by this Management Device Type Port</errorMessage>
    </validationRules>
</CustomObject>